--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,7 @@
   font-family: Inter, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  box-sizing: border-box;
 }
 
 a {
@@ -10,6 +11,9 @@ a {
   text-decoration: inherit;
 }
 
+a, h1, h2, h3, h4, div, p, span{
+    animation: all 0.3 ease 0s;
+}
 
 /* #18171D #212121 */
 li:hover{
