--- a/client/src/index.css
+++ b/client/src/index.css
@@ -158,3 +158,33 @@ body {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1 {
+      @apply text-4xl;
+    }
+    h2 {
+      @apply text-3xl;
+    }
+    h3 {
+      @apply text-2xl;
+    }
+    h4 {
+      @apply text-xl;
+    }
+    li:hover {
+      @apply text-current;
+      @apply font-medium;
+    }
+    ol{
+        list-style: decimal;
+        margin: 0;
+        padding: 0;
+    }
+    ul {
+        list-style: disc;
+        margin: 0;
+        padding: 0;
+    }
+  }
+  
