--- a/client/src/pages/Seeker/ProjectInfo/VacancyItemStyle.css
+++ b/client/src/pages/Seeker/ProjectInfo/VacancyItemStyle.css
@@ -5,3 +5,11 @@
             line-clamp: 3; 
     -webkit-box-orient: vertical;
  }
+
+ .limitline5 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 6; /* number of lines to show */
+            line-clamp: 6; 
+    -webkit-box-orient: vertical;
+ }
